--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <div class="calculatrice">
-        <div class="ecran"></div>
-        <div class="touches">
-          <button data-key="8" class="button">C</button>
-          <button data-key="53" class="button">(</button>
-          <button data-key="219" class="button">)</button>
-          <button data-key="111" class="button">/</button>
-          <button data-key="103" class="button">7</button>
-          <button data-key="104" class="button">8</button>
-          <button data-key="105" class="button">9</button>
-          <button data-key="106" class="button">*</button>
-          <button data-key="100" class="button">4</button>
-          <button data-key="101" class="button">5</button>
-          <button data-key="102" class="button">6</button>
-          <button data-key="109" class="button">-</button>
-          <button data-key="97" class="button">1</button>
-          <button data-key="98" class="button">2</button>
-          <button data-key="99" class="button">3</button>
-          <button data-key="107" class="button">+</button>
-          <button data-key="96" class="button">0</button>
-          <button data-key="110" class="button">.</button>
-          <button data-key="13"class="button">=</button> 
+        <div class="visionage"></div>
+        <div class="marque">
+          <button data-abs="8" class="button">C</button>
+          <button data-abs="53" class="button">(</button>
+          <button data-abs="219" class="button">)</button>
+          <button data-abs="111" class="button">/</button>
+          <button data-abs="103" class="button">7</button>
+          <button data-abs="104" class="button">8</button>
+          <button data-abs="105" class="button">9</button>
+          <button data-abs="106" class="button">*</button>
+          <button data-abs="100" class="button">4</button>
+          <button data-abs="101" class="button">5</button>
+          <button data-abs="102" class="button">6</button>
+          <button data-abs="109" class="button">-</button>
+          <button data-abs="97" class="button">1</button>
+          <button data-abs="98" class="button">2</button>
+          <button data-abs="99" class="button">3</button>
+          <button data-abs="107" class="button">+</button>
+          <button data-abs="96" class="button">0</button>
+          <button data-abs="110" class="button">.</button>
+          <button data-abs="13"class="button">=</button> 
         </div>
     </div>
 <script src="index.js"></script>
