--- a/index.html
+++ b/index.html
@@ -9,28 +9,26 @@
     <title>Faire une calculatrice pour débutant</title>
 </head>
 <body>
-    <div class="calculatrice">
-        <div class="ecran">0</div>
+    <div id="calculatrice">
+        <div id="ecran">0</div>
         <div class="touches">
-          <button data-key="8" class="button">C</button>
-          <button data-key="53" class="button">(</button>
-          <button data-key="219" class="button">)</button>
-          <button data-key="111" class="button">/</button>
-          <button data-key="103" class="button">7</button>
-          <button data-key="104" class="button">8</button>
-          <button data-key="105" class="button">9</button>
-          <button data-key="106" class="button">*</button>
-          <button data-key="100" class="button">4</button>
-          <button data-key="101" class="button">5</button>
-          <button data-key="102" class="button">6</button>
-          <button data-key="109" class="button">-</button>
-          <button data-key="97" class="button">1</button>
-          <button data-key="98" class="button">2</button>
-          <button data-key="99" class="button">3</button>
-          <button data-key="107" class="button">+</button>
-          <button data-key="96" class="button">0</button>
-          <button data-key="110" class="button">.</button>
-          <button data-key="13"class="button">=</button> 
+          <button  id="button_supprimer">C</button>
+          <button  class="button">/</button>
+          <button  class="button">7</button>
+          <button  class="button">8</button>
+          <button  class="button">9</button>
+          <button  class="button">*</button>
+          <button  class="button">4</button>
+          <button class="button">5</button>
+          <button  class="button">6</button>
+          <button  class="button">-</button>
+          <button  class="button">1</button>
+          <button  class="button">2</button>
+          <button  class="button">3</button>
+          <button  class="button">+</button>
+          <button  class="button">0</button>
+          <button  class="button">.</button>
+          <button id="button_egal">=</button> 
         </div> 
     </div>
 <script src="index.js"></script>
