--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    
-    <title>Faire une calculatrice pour débutant</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Basics</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">  <link rel="stylesheet" href="assets/styles/app.css" />
 </head>
+
 <body>
-    <div id="calculatrice">
-        <div id="ecran"></div>
-        <div class="touches">
-          <button  id="button_supprimer">C</button>
-          <button  class="button">/</button>
-          <button  class="button">7</button>
-          <button  class="button">8</button>
-          <button  class="button">*</button>
-          <button  class="button">9</button>
-          <button  class="button">4</button>
-          <button class="button">5</button>
-          <button  class="button">-</button>
-          <button  class="button">6</button>
-          <button  class="button">1</button>
-          <button  class="button">2</button>
-          <button  class="button">+</button>
-          <button  class="button">.</button>
-          <button  class="button">0</button>
-          <button  class="button">3</button>
-          <button id="button_egal">=</button> 
-        </div> 
+  <header>
+    <h1>The Unconventional Calculator</h1>
+  </header>
+
+  <section id="calculator">
+    <input type="number" id="input-number" />
+    <div id="calc-actions">
+      <button type="button" id="btn-add">+</button>
+      <button type="button" id="btn-subtract">-</button>
+      <button type="button" id="btn-multiply">*</button>
+      <button type="button" id="btn-divide">/</button>
     </div>
-<script src="index.js"></script>
+  </section>
+  <section id="results">
+    <h2 id="current-calculation">0</h2>
+    <h2>Result: <span id="current-result">0</span></h2>
+  </section>
+  <div class="containerMine">
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium, velit fugit et, voluptate molestiae adipisci libero magni officiis doloremque sunt perferendis similique iste possimus aliquid? Minus, quos error! Quos.
+    </p>
+  </div>
+  <script src="assets/scripts/vendor.js"></script>
+  <script src="assets/scripts/app.js"></script>
+
 </body>
+
 </html>
